# echo-effect-processor

./: CMakeLists.txt  LICENSE  README.md
include/: AudioFile.h  Visuals.h  echo_processor.h
scripts/: generate_plots.py
src/: AudioFile.cpp  Visuals.cpp  echo_naive.cpp  echo_processor.cpp  echo_simd_opt.cpp  main.cpp
